--- a/hireme.html
+++ b/hireme.html
@@ -23,9 +23,16 @@
 
 
         </ul>
+
          
 
     </nav>
+
+    <div class="main">
+
+        <h1>CURRENTLY A STUDENT!</h1>
+
+    </div>
     
 </body>
 </html>
