--- a/Aboutme.html
+++ b/Aboutme.html
@@ -20,7 +20,7 @@
             <li><a href="mywork.html">my work</a></li>
             <li><a href="mysocials.html">my socials</a></li>
             <li><a href="hireme.html">Hire me!</a></li>
-            <li><a href="Aboutme.html">Hire me!</a></li>
+            <li><a href="Aboutme.html">About me!</a></li>
 
 
 
@@ -33,6 +33,7 @@
     <div class="main">
 
         <h1>about me</h1>
+        
 
     </div>
     
