--- a/mysocials.html
+++ b/mysocials.html
@@ -20,6 +20,8 @@
             <li><a href="mywork.html">my work</a></li>
             <li><a href="mysocials.html">my socials</a></li>
             <li><a href="hireme.html">Hire me!</a></li>
+            <li><a href="Aboutme.html">About me!</a></li>
+
 
 
         </ul>
