populated info on every page

--- a/hireme.html
+++ b/hireme.html
@@ -32,7 +32,30 @@
 
     <div class="main">
 
-        <h1>CURRENTLY A STUDENT!</h1>
+        <div class="container1">
+
+            <h1>SKILLS</h1>
+                <p>
+                    Java<br> React<br> Python <br>JavaScript <br>MATLAB <br>C++<br>
+                    CSS<br> HTML<br>
+                    Latex<br>
+                </p>
+            </div>
+
+            <div class="container2">
+
+                <h1 style="color: white;">CONTACT ME</h1>
+                    <p>
+                        <h2 style="color: white;">MY EMAIL</h2>
+                <p style="color: white;">
+                    bhavikghete96@gmail.com<br>
+                </p>
+                <h2 style="color: white;">MY SOCIALS</h2>
+                <p style="color: white;">
+                    you can connect me through my socials page!
+                </p>
+                
+                </div>
 
     </div>
     
